[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "undouble"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "Undouble is a Python package to detect (near-)identical images."
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
keywords = ["images", "duplicates", "identical"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    'matplotlib',
    'numpy',
    'tqdm',
    'clustimage>=1.6.6',
    'ismember',
    'datazets>=1.0.0',
    # 'opencv-python-headless',
]

[project.urls]
Homepage = "https://erdogant.github.io/undouble"
Download = "https://github.com/erdogant/undouble/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["undouble"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "undouble.__version__" }
